--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,29 +15,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
+<!--    <FrameLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        tools:layout_editor_absoluteX="1dp"-->
+<!--        tools:layout_editor_absoluteY="1dp">-->
 
-        <Button
-            android:id="@+id/button1"
-            style="@style/Widget.AppCompat.Button"
-            android:layout_width="174dp"
-            android:layout_height="169dp"
-            android:text="Button"
-            android:onClick="clickVisibleChange"
-            />
+<!--        <Button-->
+<!--            android:id="@+id/button1"-->
+<!--            style="@style/Widget.AppCompat.Button"-->
+<!--            android:layout_width="174dp"-->
+<!--            android:layout_height="169dp"-->
+<!--            android:text="Button"-->
+<!--            android:onClick="clickVisibleChange"-->
+<!--            />-->
 
-        <Button
-            android:id="@+id/button2"
-            style="@style/Widget.AppCompat.Button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="clickVisibleChange"
-            android:text="Button" />
+<!--        <Button-->
+<!--            android:id="@+id/button2"-->
+<!--            style="@style/Widget.AppCompat.Button"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:onClick="clickVisibleChange"-->
+<!--            android:text="Button" />-->
 
-    </FrameLayout>
+<!--    </FrameLayout>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
