--- a/app/src/main/res/layout/linerlayout.xml
+++ b/app/src/main/res/layout/linerlayout.xml
@@ -20,6 +20,7 @@
 
         <Button
             android:id="@+id/button1"
+            android:onClick="clickLinearLayout"
             style="@style/Widget.AppCompat.Button"
             android:layout_width="206dp"
             android:layout_height="wrap_content"
@@ -29,6 +30,7 @@
 
         <Button
             android:id="@+id/button2"
+            android:onClick="clickLinearLayout"
             style="@style/Widget.AppCompat.Button"
             android:layout_width="206dp"
             android:layout_height="wrap_content"
@@ -52,6 +54,7 @@
 
         <Button
             android:id="@+id/button3"
+            android:onClick="clickLinearLayout"
             style="@style/Widget.AppCompat.Button"
             android:layout_width="203dp"
             android:layout_height="wrap_content"
@@ -61,6 +64,7 @@
 
         <Button
             android:id="@+id/button4"
+            android:onClick="clickLinearLayout"
             style="@style/Widget.AppCompat.Button"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
@@ -84,6 +88,7 @@
 
         <Button
             android:id="@+id/button5"
+            android:onClick="clickLinearLayout"
             style="@style/Widget.AppCompat.Button"
             android:layout_width="199dp"
             android:layout_height="wrap_content"
@@ -94,6 +99,7 @@
 
         <Button
             android:id="@+id/button6"
+            android:onClick="clickLinearLayout"
             style="@style/Widget.AppCompat.Button"
             android:layout_width="199dp"
             android:layout_height="wrap_content"
@@ -137,6 +143,7 @@
         android:layout_marginTop="8dp"
         android:layout_weight="0"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
